Back-end Programming
Added some variables
Added -hfos- prefixes to system class-names and IDs

--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
     </head>
     <body>
         <!--Loading screen-->
-        <div id="preloader">
+        <div id="-hfos-preloader">
             <!--Loading text-->
-            <span class="loading">Loading HFOS...</span>
+            <span class="-hfos-preloader-loading">Loading HFOS...</span>
         </div>
-        <div id="ui">
+        <div id="-hfos-ui">
             <!--Apps menu-->
             <div id="apps-menu" style="display: none" class="app">
                 <div></div>
             </div>
             <!--Taskbar-->
-            <div id="taskbar" class="app">
+            <div id="-hfos-taskbar" class="app">
                 <div class="tilebutton tb-button" id="apps-button" style="opacity: 0.6"></div>
             </div>
         </div>
